added start minimized option

--- a/source/LTEGamer/App.config
+++ b/source/LTEGamer/App.config
@@ -28,6 +28,9 @@
             <setting name="activeWorkaround" serializeAs="String">
                 <value>pingflooder</value>
             </setting>
+            <setting name="startMinimized" serializeAs="String">
+                <value>False</value>
+            </setting>
         </LTEGamer.Properties.Settings>
     </userSettings>
 </configuration>
